[gd_scene load_steps=6 format=3 uid="uid://dd8ikwg8yprw3"]

[ext_resource type="Script" uid="uid://b644a5setmi0s" path="res://npc.gd" id="1_xxcha"]
[ext_resource type="Texture2D" uid="uid://ds05c2ol1o1cd" path="res://ART/Sprites/NPC/npcplaceholder.png" id="2_kh24r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ul7y6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kh24r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bc6q4"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mcvl2"]
radius = 16.0

[node name="npc" type="CharacterBody2D"]
position = Vector2(66, 63)
script = ExtResource("1_xxcha")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.6250055, 2.2500017)
scale = Vector2(0.20238099, 0.17968756)
sprite_frames = SubResource("SpriteFrames_ul7y6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_bc6q4")

[node name="ChatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetection"]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_mcvl2")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_exited" from="ChatDetection" to="." method="_on_chat_detection_area_exited"]
[connection signal="body_entered" from="ChatDetection" to="." method="_on_chat_detection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
